Bug 492014 - "ASSERTION: aContent2 must not be null" with caption, td, iframe; r+sr+a-1.9.1=roc